<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KMP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favoris">Favoris</string>
    <string name="tout">Tout</string>
    <string name="albums">Albums</string>
    <string name="artistes">Artistes</string>
    <string name="playlist">Playlists</string>
    <string name="title_activity_detail_album">DetailAlbum</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="songs">Songs</string>
    <string name="song">Song</string>
    <string name="album">Album</string>
    <string name="playing_notification_name">KMP en cours</string>
    <string name="playing_notification_description">notification servant a garder la main sur le lecteur KMP</string>
    <string name="unplayable_file">impossible de lire le fichier</string>
    <string name="supprimer">Supprimer</string>
    <string name="partager">Partager</string>
    <string name="annuler">Annuler</string>
    <string name="supprimer_un_song">Voulez vous vraiment supprimer ce morceau?</string>
    <string name="details">Détails</string>
    <string name="titre">Titre</string>
    <string name="artiste">Artiste</string>
    <string name="genre">Genre</string>
    <string name="track">Track</string>
    <string name="taille">Taille</string>
    <string name="duree">Durée</string>
    <string name="fermer">Fermer</string>
    <string name="localisation">Localisation</string>
    <string name="disque">Disque</string>
    <string name="nouvelle_playlist">Nouvelle Playlist</string>
    <string name="valider">Valider</string>
    <string name="donner_un_nom_a_la_playlist">Veuillez donner un nom a votre nouvelle playlist</string>
    <string name="melanger_tout">Mélanger tout</string>
    <string name="jouer_apres">Jouer apres</string>
    <string name="lire_juste_apres">Lire juste après</string>
    <string name="ajouter_a_la_playlist">Ajouter à la playlist</string>
    <string name="jouer_tout">Jouer tout</string>
    <string name="le_song_sera_jouer_juste_apres">Le song sera joué juste après celui en cours</string>
    <string name="le_song_sera_joue_apres_la_liste_en_cours">Le song sera joué juste aprèsla liste de lecture en cours</string>
    <string name="la_liste_sera_joue_apres_le_song_en_cours">cette liste sera joué juste après le song en cours</string>
    <string name="la_liste_sera_joue_apres_celle_en_cours">cette liste sera joué juste après celle en cours</string>
    <string name="retirer_des_favoris">Retirer des favoris</string>
    <string name="ajouter_aux_favori">Ajouter aux favoris</string>
    <string name="une_erreur_est_survenue">Une erreur est survenue</string>
    <string name="partager_via">Partager via</string>
    <string name="ajoute_a">Ajouté à</string>
    <string name="Personnaliser">Personnaliser</string>
    <string name="ok">OK</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="precedent">précédent</string>
    <string name="suivant">suivant</string>
    <string name="erreur_survenue_veuillez_reesayez">Une erreur est survenue, veuillez rééssayer</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="acceuil">Acceuil</string>
    <string name="playlist_vide">Cette playlist est vide</string>
    <string name="image_transition_name">image_transition_name</string>
    <string name="toolbar_title_transition_name">toolbar_title</string>
    <string name="rewind_button_transition">rewind_button_transition</string>
    <string name="shuffle_button_transition">shuffle_button_transition</string>
    <string name="like_button_transition">rewind_button_transition</string>
    <string name="repeat_button_transition">repeat_button_transition</string>
    <string name="forward_button_transition">forward_button_transition</string>
    <string name="play_pause_button_transition">play_pause_button_transition</string>
    <string name="appuyer_e_nouvea_pour_quitter">Appuyer a nouveau pour quitter</string>
    <string name="home">Home</string>
    <string name="musiques">Musiques</string>
    <string name="rechercher">Rechercher</string>
    <string name="supprimer_plusieurs_songs">Voulez vous vraiment supprimer ces morceaux</string>
    <string name="veuillez_choisir_au_moins_un_element">Veuillez choisir au moins un élément</string>
    <string name="veuillez_choisir_un_song">Veuillez choisir un song à jouer</string>
</resources>