<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kmp.Activity.MainActivity">

    <item
        android:id="@+id/action_rechercher"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/rechercher"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_supprimer"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:title="@string/supprimer"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="always"
        android:title="menu">

        <menu>

            <item android:id="@+id/action_partager"
                android:title="@string/partager"
                app:showAsAction="never"/>

            <item android:id="@+id/action_settings"
                android:orderInCategory="100"
                android:title="@string/action_settings"
                app:showAsAction="never"
                android:visible="false"/>
        </menu>

    </item>
</menu>
