<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_open_playlist"
        android:icon="@drawable/ic_queue_music_black_24dp"
        android:title="@string/playlist"
        android:iconTint="@android:color/white"
        app:showAsAction="always"/>

    <item
        android:title="menumore"
        app:showAsAction="always"
        android:icon="@drawable/ic_more_vert_black_24dp"
        android:iconTint="@android:color/white">

        <menu>
            <item android:id="@+id/action_add_to_playlist"
                android:title="Ajouter a une playlist"/>

            <item android:id="@+id/action_partager"
                android:title="@string/partager"/>

            <item android:id="@+id/action_supprimer"
                android:title="@string/supprimer"/>

            <item android:id="@+id/action_details"
                android:title="Details"/>

        </menu>

    </item>



</menu>